# shiba

./: Cargo.toml  LICENSE  README.md  create-hooks.rs
.shiba/: pre-commit
