[package]
name = "shiba"
description = "A git hook installer for Cargo"
version = "0.1.1"
authors = ["Stephan Wolski"]
repository = "https://github.com/Slowki/shiba"

readme = "README.md"
license = "MIT"
keywords = ["git", "hooks", "tooling", "shiba"]
categories = ["development-tools"]

build = "create-hooks.rs"

